# qffp

./: Cargo.toml  LICENSE  README.md
res/: build-assets.sh  copy-from-external.sh  game-ready.sh
res/sheets/: character-00.json  character-01.json  crop-empty.json  crop-flower.json  crop-leaf.json  cryopod.json  grass.json  particle-dirt.json  particle-heart.json  particle-water.json  terminal.json  tile-dirt.json  tool-packet.json  tool-packet2.json  tool-shovel.json  tool-watercan.json  transition.json
res/src/: character-00.aseprite  character-01.aseprite  crop-empty.aseprite  crop-flower.aseprite  crop-leaf.aseprite  cryopod.aseprite  grass.aseprite  particle-dirt.aseprite  particle-heart.aseprite  particle-water.aseprite  terminal.aseprite  tile-dirt.aseprite  tool-packet.aseprite  tool-packet2.aseprite  tool-shovel.aseprite  tool-watercan.aseprite  transition.aseprite
src/: main.rs
src/app/: mod.rs  render.rs  sprite.rs  state.rs
